bodylayer sticking out in footer fix

--- a/nextportfolio/src/app/globals.css
+++ b/nextportfolio/src/app/globals.css
@@ -963,6 +963,7 @@ section {
   .bodyLayer {
     position: fixed;
     max-width: 950px;
+    top: -1px;
   }
   
   .hands {
